<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo2UTM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">Versoin 1.0.2</string>
    <string name="degree_symbol">°</string>
    <string name="minutes_symbol">´</string>
    <string name="second_symbol">´´</string>
    <string name="decimal">Decimal Degrees (DD)</string>
    <string name="degree">Degrees Minutes Seconds  (DMS)</string>
    <string name="geographic">Geo</string>
    <string name="utm">UTM</string>
    <string name="zone">Zone : </string>
    <string name="easting">Easting : </string>
    <string name="northing">Northing : </string>
    <string name="longitude">Longitude : </string>
    <string name="latitude">Latitude : </string>
    <string name="convert">Convert</string>
    <string name="longitudeMessage">Please enter longitude</string>
    <string name="latitudeMessage">Please enter latitude</string>
    <string name="zoneMessage">Please enter zone</string>
    <string name="DMStoDC">DMS to DD</string>
    <string name="DCtoDMS">DD to DMS</string>
    <string name="UTMtoGeo">UTM to Geo</string>
    <string name="GeotoUTM">Geo to UTM</string>
    
    <string name="map">Map</string>

</resources>